--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "simple dom creator.",
   "author": "nwtks",
   "license": "MIT",
+  "main": "src/h.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nwtks/h.git"
+    "url": "https://github.com/nwtks/h"
   },
   "devDependencies": {
     "rollup": "^0.66.0",
