--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple dom creator.",
   "author": "nwtks",
   "license": "MIT",
-  "main": "src/h.js",
+  "main": "dist/h.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/nwtks/h"
