--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "hel",
-  "version": "0.0.1",
-  "description": "simple HTMLElement creator.",
+  "name": "hec",
+  "version": "0.1.0",
+  "description": "tiny HTMLElement creator.",
   "author": "nwtks",
   "license": "MIT",
-  "main": "dist/hel.js",
+  "main": "dist/hec.js",
+  "homepage": "https://github.com/nwtks/hec",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nwtks/hel"
+    "url": "https://github.com/nwtks/hec"
   },
   "devDependencies": {
-    "rollup": "^0.66.0",
+    "rollup": "^0.67.0",
     "rollup-plugin-buble": "^0.19.0",
     "rollup-plugin-uglify": "^6.0.0"
   },
