--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "hec",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "tiny HTMLElement creator.",
-  "author": "nwtks",
   "license": "MIT",
   "main": "dist/hec.js",
+  "files": [
+    "src",
+    "dist"
+  ],
+  "author": "nwtks",
   "homepage": "https://github.com/nwtks/hec",
   "repository": {
     "type": "git",
