--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hec",
-  "version": "0.1.2",
+  "name": "@nwtks/hec",
+  "version": "0.2.0",
   "description": "tiny HTMLElement creator.",
   "license": "MIT",
   "main": "dist/hec.js",
@@ -9,7 +9,6 @@
     "dist"
   ],
   "author": "nwtks",
-  "homepage": "https://github.com/nwtks/hec",
   "repository": {
     "type": "git",
     "url": "https://github.com/nwtks/hec"
